<resources>
    <string name="app_name">LindiaProjectX</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <!--Res-->
    <!--Menu ApplicationActivity-->
    <string name="action_home">Home</string>
    <string name="action_account">Account</string>
    <string name="action_orders">Orders</string>
    <string name="action_shows">Shows</string>

    <!-- Menu AccountActivity -->

    <string name="action_home_second">Home</string>
    <string name="action_account_second">Account</string>
    <string name="action_orders_second">Orders</string>
    <string name="action_shows_second">Shows</string>

    <!-- Hint View -->
    <string name="action_login_hint_email">E-mail</string>
    <string name="action_login_hint_password">Password</string>
    <string name="action_login_hint_confirm">Confirm password</string>

    <!--Text View-->

    <string name="action_login_facebok">Facebok</string>
    <string name="action_login_google">Google</string>
    <string name="action_login_or">or</string>
    <string name="action_login_string_btn_lindia_connect">Lindia connect</string>
    <string name="action_login_forgot">forgot paswword</string>
    <string name="btn_add_found_fragment_my_account">ADD FOUND</string>
    <string name="btn_update_changes_fragment_my_account">Update Changes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_application">ApplicationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


</resources>
