<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:orderInCategory="100"
        android:title="@string/action_home"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_account"
        android:orderInCategory="100"
        android:title="@string/action_account"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_orders"
        android:orderInCategory="100"
        android:title="@string/action_orders"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_shows"
        android:orderInCategory="100"
        android:title="@string/action_shows"
        app:showAsAction="never" />
</menu>
